# deepbiology-lab

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  compose.yaml  deepbiology_alibaba_cloud_demo.md  deepbiology_q1_cd34_kasumi1.sh  gemini-extension.json  mcp_config.json  plugin.json  pyproject.toml  qwen-extension.json  screenshot.md  test_client.py
.claude-plugin/: marketplace.json
.github/workflows/: validate-extensions.yml
codex-plugin-python/: .mcp.json
codex-plugin-python/.codex-plugin/: plugin.json
codex-plugin-python/scripts/: query.py
codex-plugin/.claude-plugin/: marketplace.json
deepbiology/: __init__.py  catalogs.py  client.py  exceptions.py  variants.py
deepbiology_lab/: __init__.py  cli.py  config.py  mcp_server.py
extension/: README.md
scripts/: install.sh  sync_plugin_skills.py  validate_extensions.py
skills/deepbiology-cancer-mutations/: SKILL.md
skills/deepbiology-check-status/: SKILL.md
skills/deepbiology-download-result/: SKILL.md
skills/deepbiology-get-result/: SKILL.md
skills/deepbiology-list-models/: SKILL.md
skills/deepbiology-q1-regulation/: SKILL.md
skills/deepbiology-q2-enhancer-importance/: SKILL.md
skills/deepbiology-q3-mutation-impact/: SKILL.md
skills/deepbiology-q4-enhancer-redesign/: SKILL.md
skills/deepbiology-resolve-cell-line/: SKILL.md
tests/: test_catalogs.py  test_cli.py  test_client_download.py  test_docker_deployment.py  test_extensions.py  test_mcp_executor.py  test_mcp_http.py  test_mcp_server.py  test_plugin_wrapper.py  test_variants.py
(+17 files in other folders)
