[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepbiology-lab"
version = "0.3.2"
description = "CLI and Python client for DeepBiology Lab"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "DeepBiology" }]
urls = { repository = "https://github.com/DeepBiology/deepbiology-lab" }
dependencies = [
  "requests>=2.31.0",
  "httpx>=0.28.1",
  "mcp==1.28.1",
]

[project.scripts]
deepbiology-lab = "deepbiology_lab.cli:main"
deepbiology-lab-mcp = "deepbiology_lab.mcp_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["deepbiology", "deepbiology_lab"]
